# otel-hooks

./: .gitignore  README.md  SECURITY.md  mise.toml  pyproject.toml
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  scorecard.yml
docs/adr/: 0002-opencode-plugin-path-is-strictly-opencode-plugins.md  0003-metrics-tools-must-register-all-observable-events.md
docs/upstream-specs/: README.md  claude.md  cline.md  codex.md  copilot.md  cursor.md  gemini.md  kiro.md  opencode.md
scripts/: check_upstream_specs.py
src/cc_tracing_hooks/: cli.py  hook.py  settings.py
src/otel_hooks/: cli.py  config.py  file_io.py  hook.py  hook_event.py  logging_setup.py  settings.py
src/otel_hooks/adapters/: __init__.py  hook_payload.py
src/otel_hooks/attribution/: __init__.py  extractor.py  record.py
src/otel_hooks/domain/: transcript.py
src/otel_hooks/providers/: __init__.py  _dd_transport.py  common.py  datadog.py  factory.py  langfuse.py  otlp.py
src/otel_hooks/runtime/: state.py
src/otel_hooks/tools/: __init__.py  claude.py  cline.py  codex.py  copilot.py  cursor.py  gemini.py  json_io.py  kiro.py  opencode.py
tests/: __init__.py  test_attribution.py  test_cli_behavior.py  test_hook_entrypoint.py  test_hook_integration.py  test_hook_payload_adapter.py  test_logging_setup.py  test_provider_common.py  test_provider_factory.py  test_providers_contract.py  test_runtime_state.py  test_tools_e2e.py  test_tools_idempotency.py  test_tools_metrics_registration.py  test_tools_opencode.py  test_tools_registry_and_config.py  test_transcript_domain.py
