[project]
name = "otel-hooks"
version = "0.2.0"
description = "Claude Code tracing hooks for Langfuse observability"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["langfuse"]

[project.scripts]
otel-hooks = "otel_hooks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
