[project]
name = "otel-hooks"
version = "0.7.2"
description = "AI coding tools tracing hooks for observability (Langfuse, OTLP, and more)"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "tomli-w>=1.2.0",
]

[project.optional-dependencies]
langfuse = ["langfuse"]
otlp = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]
datadog = ["ddtrace"]

[project.scripts]
otel-hooks = "otel_hooks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
