[project]
name = "otel-hooks"
version = "0.10.1"
description = "AI coding tools tracing hooks for observability (Langfuse, OTLP, and more)"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "ddtrace",
    "langfuse",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-sdk",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "tomli-w>=1.2.0",
]

[project.scripts]
otel-hooks = "otel_hooks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
